// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddService should render 1`] = `
.emotion-0 {
  width: 100%;
  text-align: left;
  background-color: #fff;
}

.emotion-1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  padding: 10px 30px;
}

.emotion-2 {
  font-size: 14px;
  font-weight: 600;
  color: #303030;
  line-height: 36px;
  white-space: nowrap;
}

.emotion-3 {
  -webkit-flex: 0 0 100px;
  -ms-flex: 0 0 100px;
  flex: 0 0 100px;
  margin-right: 2%;
}

.emotion-4 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  margin-right: 10px;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  position: relative;
  width: 250px;
}

.emotion-5 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: 36px;
  margin: 0;
  outline: none;
  padding: 0 1rem;
  text-align: left;
  width: 100%;
}

.emotion-5.animated input {
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
}

.emotion-5 input::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-5 input::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-5 input:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-5 input::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-5 input.focused,
.emotion-5 input:active,
.emotion-5 input:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-5 input:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-5 .message {
  font-size: 12px;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

.emotion-5.error input,
.emotion-5.error input.focused,
.emotion-5.error input:active,
.emotion-5.error input:focus {
  border-bottom: 2px solid #d01111;
}

.emotion-5.error .message {
  color: #d01111;
}

.emotion-6 {
  width: 500px;
}

.emotion-14 {
  -webkit-flex: 0 0 100px;
  -ms-flex: 0 0 100px;
  flex: 0 0 100px;
  margin-right: 2%;
  font-size: 14px;
  font-weight: 600;
  color: #303030;
  line-height: 36px;
  white-space: nowrap;
}

.emotion-17 {
  color: #3570f4;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-28 {
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: column nowrap;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  position: relative;
  width: 500px;
}

.emotion-28>textarea {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: auto;
  line-height: 1.5;
  margin: 0;
  outline: none;
  padding: 0.25em 0.75rem;
  text-align: left;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  width: auto;
}

.emotion-28>textarea::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-28>textarea::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-28>textarea:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-28>textarea::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-28>textarea:active,
.emotion-28>textarea:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-28>textarea:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-28>textarea[disabled] {
  background: rgba(48,48,48,0.05);
  border-bottom: 2px solid rgba(48,48,48,0.05);
  color: rgba(48,48,48,0.25);
  cursor: not-allowed;
}

.emotion-28 .message {
  font-size: 12px;
  color: #303030;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

.emotion-29>textarea {
  resize: vertical;
}

<div
  autocomplete="off"
  class="emotion-0"
  data-testid="add-service-form"
>
  <div
    class="emotion-1"
  >
    <label
      class="emotion-2 denali-input-label emotion-3"
      for="service-name"
    >
      Service Name
    </label>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5 denali-input animated emotion-6"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          id="service-name"
          name="service-name"
          value=""
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <label
      class="emotion-2 denali-input-label emotion-3"
      for="description"
    >
      Description
    </label>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5 denali-input animated emotion-6"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          id="description"
          name="description"
          value=""
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-14"
    >
      NOTE
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-6"
      >
        Test Message
         
        Generate a
        <a
          class="emotion-17"
        >
           
          key pair
           
        </a>
        and add the public key below ONLY if you are not utilizing those.
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
    data-testid="add-key-id"
  >
    <label
      class="emotion-2 denali-input-label emotion-3"
      for="key-id"
    >
      Public Key Id
    </label>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5 denali-input animated emotion-6"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          id="key-id"
          name="key-id"
          value=""
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-1"
    data-testid="add-key-value"
  >
    <label
      class="emotion-2 denali-input-label emotion-3"
      for="key-value"
    >
      Key Value
    </label>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-28 denali-textarea emotion-29"
        data-testid="textarea-wrapper"
      >
        <textarea
          data-testid="textarea"
          id="key-value"
          name="key-value"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AddService should render error after addService throws error(other) 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Status: 1. Message: test-error
</div>
`;

exports[`AddService should render error after addService throws error(refresh) 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Session expired. Please refresh the page.
</div>
`;

exports[`AddService should render error if no key name specified 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Service name is required.
</div>
`;

exports[`AddService should render error when after getService throws error(other) 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Session expired. Please refresh the page.
</div>
`;

exports[`AddService should render error when service already exists 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Service test-name already exists.
</div>
`;
